{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 25,
  "lineage": "455491fb-6b64-cab2-20e3-2f0a02333759",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "openarena_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:636962871213:loadbalancer/net/sandbox-lb/811d95f2abcba3f1",
            "arn_suffix": "net/sandbox-lb/811d95f2abcba3f1",
            "dns_name": "sandbox-lb-811d95f2abcba3f1.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:636962871213:loadbalancer/net/sandbox-lb/811d95f2abcba3f1",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "sandbox-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-075e01afb612d101d"
              },
              {
                "subnet_id": "subnet-0f71fd561e96ef255"
              }
            ],
            "subnets": [
              "subnet-075e01afb612d101d",
              "subnet-0f71fd561e96ef255"
            ],
            "tags": {
              "Name": "sandbox-lb"
            },
            "vpc_id": "vpc-0960a2216c586d65e",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "aws_subnet.workspace_public_subnet_1a",
            "aws_subnet.workspace_public_subnet_1b",
            "aws_vpc.workspace_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "openarena_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:636962871213:listener/net/sandbox-lb/811d95f2abcba3f1/0fe50629890037bd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:636962871213:targetgroup/sandbox-tg/508410fd9f1bd360",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:636962871213:listener/net/sandbox-lb/811d95f2abcba3f1/0fe50629890037bd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:636962871213:loadbalancer/net/sandbox-lb/811d95f2abcba3f1",
            "port": 27960,
            "protocol": "UDP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.openarena_lb",
            "aws_alb_target_group.openarena_tg",
            "aws_subnet.workspace_public_subnet_1a",
            "aws_subnet.workspace_public_subnet_1b",
            "aws_vpc.workspace_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "openarena_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:636962871213:targetgroup/sandbox-tg/508410fd9f1bd360",
            "arn_suffix": "targetgroup/sandbox-tg/508410fd9f1bd360",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:636962871213:targetgroup/sandbox-tg/508410fd9f1bd360",
            "lambda_multi_value_headers_enabled": false,
            "name": "sandbox-tg",
            "port": 27960,
            "protocol": "UDP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "sandbox-tg"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0960a2216c586d65e"
          },
          "dependencies": [
            "aws_vpc.workspace_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "workspace_eip_nat_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-03b25bf8baf13c432",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-218-251-100.compute-1.amazonaws.com",
            "public_ip": "3.218.251.100",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "workspace_eip_nat_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0ef3850541a61a676",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-84-38-133.compute-1.amazonaws.com",
            "public_ip": "54.84.38.133",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "workspace_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636962871213:internet-gateway/igw-06aa66ed320a6d992",
            "id": "igw-06aa66ed320a6d992",
            "owner_id": "636962871213",
            "tags": {
              "DeployedWith": "terraform",
              "Env": "sandbox",
              "Name": "sandbox-gateway",
              "Project": "sandbox"
            },
            "vpc_id": "vpc-0960a2216c586d65e"
          },
          "dependencies": [
            "aws_vpc.workspace_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "workspace_nat_gateway_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b25bf8baf13c432",
            "id": "nat-0441d36b17e3b7e9d",
            "network_interface_id": "eni-00bc542de1adae017",
            "private_ip": "10.2.16.247",
            "public_ip": "3.218.251.100",
            "subnet_id": "subnet-075e01afb612d101d",
            "tags": {
              "DeployedWith": "terraform",
              "Env": "sandbox",
              "Name": "sandbox-nat_1a",
              "Project": "sandbox"
            }
          },
          "dependencies": [
            "aws_eip.workspace_eip_nat_1a",
            "aws_subnet.workspace_public_subnet_1a",
            "aws_vpc.workspace_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "workspace_nat_gateway_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef3850541a61a676",
            "id": "nat-0e26c211b1ccbf526",
            "network_interface_id": "eni-0fa5dc699bd78ce70",
            "private_ip": "10.2.32.212",
            "public_ip": "54.84.38.133",
            "subnet_id": "subnet-0f71fd561e96ef255",
            "tags": {
              "DeployedWith": "terraform",
              "Env": "sandbox",
              "Name": "sandbox-nat_1b",
              "Project": "sandbox"
            }
          },
          "dependencies": [
            "aws_eip.workspace_eip_nat_1b",
            "aws_subnet.workspace_public_subnet_1b",
            "aws_vpc.workspace_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "workspace_nat_route_table_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-012b6339e60a11cc6",
            "owner_id": "636962871213",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0441d36b17e3b7e9d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "DeployedWith": "terraform",
              "Env": "sandbox",
              "Name": "sandbox-private_rt_1a",
              "Project": "sandbox"
            },
            "vpc_id": "vpc-0960a2216c586d65e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.workspace_eip_nat_1a",
            "aws_nat_gateway.workspace_nat_gateway_1a",
            "aws_subnet.workspace_public_subnet_1a",
            "aws_vpc.workspace_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "workspace_nat_route_table_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f7dc2278972d4697",
            "owner_id": "636962871213",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e26c211b1ccbf526",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "DeployedWith": "terraform",
              "Env": "sandbox",
              "Name": "sandbox-private_rt_1b",
              "Project": "sandbox"
            },
            "vpc_id": "vpc-0960a2216c586d65e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.workspace_eip_nat_1b",
            "aws_nat_gateway.workspace_nat_gateway_1b",
            "aws_subnet.workspace_public_subnet_1b",
            "aws_vpc.workspace_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "workspace_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0219cd2360cfeeef2",
            "owner_id": "636962871213",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06aa66ed320a6d992",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "DeployedWith": "terraform",
              "Env": "sandbox",
              "Name": "sandbox-public_rt",
              "Project": "sandbox"
            },
            "vpc_id": "vpc-0960a2216c586d65e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.workspace_gateway",
            "aws_vpc.workspace_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "workspace_rt_priv_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d0864e9aff1046e",
            "route_table_id": "rtb-012b6339e60a11cc6",
            "subnet_id": "subnet-0d5fc6c9889a9a42c"
          },
          "dependencies": [
            "aws_eip.workspace_eip_nat_1a",
            "aws_nat_gateway.workspace_nat_gateway_1a",
            "aws_route_table.workspace_nat_route_table_1a",
            "aws_subnet.workspace_private_subnet_1a",
            "aws_subnet.workspace_public_subnet_1a",
            "aws_vpc.workspace_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "workspace_rt_priv_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0773da767cf4bfa67",
            "route_table_id": "rtb-0f7dc2278972d4697",
            "subnet_id": "subnet-0950ee7a544bf5b06"
          },
          "dependencies": [
            "aws_eip.workspace_eip_nat_1b",
            "aws_nat_gateway.workspace_nat_gateway_1b",
            "aws_route_table.workspace_nat_route_table_1b",
            "aws_subnet.workspace_private_subnet_1b",
            "aws_subnet.workspace_public_subnet_1b",
            "aws_vpc.workspace_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "workspace_rt_pub_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09af15bb39421cb66",
            "route_table_id": "rtb-0219cd2360cfeeef2",
            "subnet_id": "subnet-075e01afb612d101d"
          },
          "dependencies": [
            "aws_internet_gateway.workspace_gateway",
            "aws_route_table.workspace_public_route_table",
            "aws_subnet.workspace_public_subnet_1a",
            "aws_vpc.workspace_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "workspace_rt_pub_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6ab87304af97dff",
            "route_table_id": "rtb-0219cd2360cfeeef2",
            "subnet_id": "subnet-0f71fd561e96ef255"
          },
          "dependencies": [
            "aws_internet_gateway.workspace_gateway",
            "aws_route_table.workspace_public_route_table",
            "aws_subnet.workspace_public_subnet_1b",
            "aws_vpc.workspace_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "openarena_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636962871213:security-group/sg-0b4781d6be2717612",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b4781d6be2717612",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27960,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 27960
              }
            ],
            "name": "sandbox-sg",
            "name_prefix": "",
            "owner_id": "636962871213",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0960a2216c586d65e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.workspace_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "workspace_private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636962871213:subnet/subnet-0d5fc6c9889a9a42c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.2.116.0/24",
            "id": "subnet-0d5fc6c9889a9a42c",
            "map_public_ip_on_launch": false,
            "owner_id": "636962871213",
            "tags": {
              "DeployedWith": "terraform",
              "Env": "sandbox",
              "Name": "sandbox-priv_sub_1a",
              "Project": "sandbox"
            },
            "vpc_id": "vpc-0960a2216c586d65e"
          },
          "dependencies": [
            "aws_vpc.workspace_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "workspace_private_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636962871213:subnet/subnet-0950ee7a544bf5b06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.132.0/24",
            "id": "subnet-0950ee7a544bf5b06",
            "map_public_ip_on_launch": false,
            "owner_id": "636962871213",
            "tags": {
              "DeployedWith": "terraform",
              "Env": "sandbox",
              "Name": "sandbox-priv_sub_1b",
              "Project": "sandbox"
            },
            "vpc_id": "vpc-0960a2216c586d65e"
          },
          "dependencies": [
            "aws_vpc.workspace_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "workspace_public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636962871213:subnet/subnet-075e01afb612d101d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.2.16.0/24",
            "id": "subnet-075e01afb612d101d",
            "map_public_ip_on_launch": true,
            "owner_id": "636962871213",
            "tags": {
              "DeployedWith": "terraform",
              "Env": "sandbox",
              "Name": "sandbox-public_1a",
              "Project": "sandbox"
            },
            "vpc_id": "vpc-0960a2216c586d65e"
          },
          "dependencies": [
            "aws_vpc.workspace_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "workspace_public_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636962871213:subnet/subnet-0f71fd561e96ef255",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.32.0/24",
            "id": "subnet-0f71fd561e96ef255",
            "map_public_ip_on_launch": true,
            "owner_id": "636962871213",
            "tags": {
              "DeployedWith": "terraform",
              "Env": "sandbox",
              "Name": "sandbox-public_1b",
              "Project": "sandbox"
            },
            "vpc_id": "vpc-0960a2216c586d65e"
          },
          "dependencies": [
            "aws_vpc.workspace_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "workspace_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636962871213:vpc/vpc-0960a2216c586d65e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-085c1ee03a7133f26",
            "default_route_table_id": "rtb-01258503c586dd1f6",
            "default_security_group_id": "sg-0fdea7cf28a2cf86b",
            "dhcp_options_id": "dopt-05738f6aee5168e55",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0960a2216c586d65e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01258503c586dd1f6",
            "owner_id": "636962871213",
            "tags": {
              "DeployedWith": "terraform",
              "Env": "sandbox",
              "Name": "sandbox-vpc",
              "Project": "sandbox"
            }
          }
        }
      ]
    }
  ]
}